// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BasicButton renders 1`] = `
<button
  onClick={[Function]}
  style={
    Object {
      "backgroundColor": "#770077",
      "borderColor": "black",
      "borderRadius": 25,
      "borderWidth": 5,
      "color": "#fff",
      "minHeight": 50,
      "minWidth": 50,
      "paddingBottom": 10,
      "paddingLeft": 15,
      "paddingRight": 15,
      "paddingTop": 10,
    }
  }
>
  Basic button
</button>
`;

exports[`Cart renders 1`] = `
<div
  style={
    Array [
      Object {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <div>
    <h2>
      Total: R$4.196,85
    </h2>
    <div>
      <div>
        <button
          disabled={false}
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "#770077",
              "borderColor": "black",
              "borderRadius": 25,
              "borderWidth": 5,
              "color": "#fff",
              "minHeight": 50,
              "minWidth": 50,
              "paddingBottom": 10,
              "paddingLeft": 15,
              "paddingRight": 15,
              "paddingTop": 10,
            }
          }
        >
          -
        </button>
        <span>
          1
        </span>
        <button
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "#770077",
              "borderColor": "black",
              "borderRadius": 25,
              "borderWidth": 5,
              "color": "#fff",
              "minHeight": 50,
              "minWidth": 50,
              "paddingBottom": 10,
              "paddingLeft": 15,
              "paddingRight": 15,
              "paddingTop": 10,
            }
          }
        >
          +
        </button>
        <span>
          prod1
           - 
          R$123,45
        </span>
      </div>
      <div>
        <button
          disabled={false}
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "#770077",
              "borderColor": "black",
              "borderRadius": 25,
              "borderWidth": 5,
              "color": "#fff",
              "minHeight": 50,
              "minWidth": 50,
              "paddingBottom": 10,
              "paddingLeft": 15,
              "paddingRight": 15,
              "paddingTop": 10,
            }
          }
        >
          -
        </button>
        <span>
          6
        </span>
        <button
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "#770077",
              "borderColor": "black",
              "borderRadius": 25,
              "borderWidth": 5,
              "color": "#fff",
              "minHeight": 50,
              "minWidth": 50,
              "paddingBottom": 10,
              "paddingLeft": 15,
              "paddingRight": 15,
              "paddingTop": 10,
            }
          }
        >
          +
        </button>
        <span>
          prod2
           - 
          R$4.073,40
        </span>
      </div>
    </div>
  </div>
  <button
    onClick={[Function]}
    style={
      Object {
        "backgroundColor": "#007777",
        "borderColor": "black",
        "borderRadius": 25,
        "borderWidth": 5,
        "color": "#fff",
        "marginTop": 20,
        "minHeight": 50,
        "minWidth": 50,
        "paddingBottom": 10,
        "paddingLeft": 15,
        "paddingRight": 15,
        "paddingTop": 10,
      }
    }
  >
    Comprar
  </button>
</div>
`;

exports[`LoadingButton renders 1`] = `
<button
  onClick={[Function]}
  style={
    Object {
      "backgroundColor": "#000077",
      "borderColor": "black",
      "borderRadius": 25,
      "borderWidth": 5,
      "color": "#fff",
      "minHeight": 50,
      "minWidth": 50,
      "paddingBottom": 10,
      "paddingLeft": 15,
      "paddingRight": 15,
      "paddingTop": 10,
      "width": 300,
    }
  }
>
  Delayed counter: 0
</button>
`;
